# product/online/docs/swagger.yaml
@@ -1,6 +1,23 @@
 info:
   contact: {}
 paths:
+  /login:
+    post:
+      parameters:
+      - description: username
+        in: formData
+        name: username
+        type: string
+      - description: password
+        in: formData
+        name: password
+        type: string
+      responses:
+        "200":
+          description: '{"code":"200", "msg":"","data":""}'
+          schema:
+            type: string
+      summary: 用户登录
   /problem-detail:
     get:
       parameters:
@@ -39,4 +56,92 @@ paths:
           schema:
             type: string
       summary: 问题列表
+  /register:
+    post:
+      parameters:
+      - description: mail
+        in: formData
+        name: mail
+        required: true
+        type: string
+      - description: code
+        in: formData
+        name: code
+        required: true
+        type: string
+      - description: name
+        in: formData
+        name: name
+        required: true
+        type: string
+      - description: password
+        in: formData
+        name: password
+        required: true
+        type: string
+      - description: phone
+        in: formData
+        name: phone
+        type: string
+      responses:
+        "200":
+          description: '{"code":"200", "msg":"","data":""}'
+          schema:
+            type: string
+      summary: 用户注册
+  /send-code:
+    post:
+      parameters:
+      - description: email
+        in: formData
+        name: email
+        type: string
+      responses:
+        "200":
+          description: '{"code":"200", "msg":"","data":""}'
+          schema:
+            type: string
+      summary: 发送验证码
+  /submit-list:
+    get:
+      parameters:
+      - description: page
+        in: query
+        name: page
+        type: integer
+      - description: size
+        in: query
+        name: size
+        type: integer
+      - description: problem_identity
+        in: query
+        name: problem_identity
+        type: string
+      - description: user_identity
+        in: query
+        name: user_identity
+        type: string
+      - description: status
+        in: query
+        name: status
+        type: integer
+      responses:
+        "200":
+          description: '{"code":"200", "msg":"","data":""}'
+          schema:
+            type: string
+      summary: 提交列表
+  /user-detail:
+    get:
+      parameters:
+      - description: user_identity
+        in: query
+        name: identity
+        type: string
+      responses:
+        "200":
+          description: '{"code":"200", "msg":"","data":""}'
+          schema:
+            type: string
+      summary: 用户详情
 swagger: "2.0"
