# product/online/router/app.go
@@ -14,7 +14,18 @@ func Router() *gin.Engine {
 	r := gin.Default()
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 	r.GET("/ping", service.Ping)
+	//问题
 	r.GET("/problem-list", service.GetProblemList)
 	r.GET("/problem-detail", service.GetProblemDetail)
+
+	//用户
+	r.GET("/user-detail", service.GetUserDetail)
+	r.POST("/login", service.Login)
+	r.POST("/send-code", service.SendCode)
+	r.POST("/register", service.Register)
+
+	//提交记录
+	r.GET("/submit-list", service.GetSubmitList)
+
 	return r
 }
